Fixed annoying scrollbar display on Firefox

--- a/src/slipstream/ui/views/css/dashboard.css
+++ b/src/slipstream/ui/views/css/dashboard.css
@@ -60,6 +60,7 @@
 
 .gauge {
     display: inline-block;
+    overflow: hidden;
     width: 200px;
     height: 160px;
 }
